--- a/package.json
+++ b/package.json
@@ -13,25 +13,31 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@microlink/react": "^5.5.12",
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.1",
+    "framer-motion": "^9.0.1",
+    "moment": "^2.29.4",
     "next": "13.1.6",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-icons": "^4.7.1",
+    "react-icons": "4.8.0",
     "recoil": "^0.7.6",
     "safe-json-stringify": "^1.2.0",
-    "typescript": "4.9.5"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/safe-json-stringify": "^1.1.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "prettier": "^2.8.7",
     "typescript": "4.9.5"
   }
 }
